new locale deprecado, trocando para sintaxe locale.of moderno